Adding Photo upload functionality to the application

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -12,5 +12,13 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "CloudSetting": {
+   
+    "CloudName" :"siri-info-solution", 
+    "ApiKey" :"738595137918221",
+    "ApiSecret":"XbTP2KERA78S4z702d2V99HK7z0"
+
+  }
 }
